project 2nd div

--- a/Postivus/style.css
+++ b/Postivus/style.css
@@ -71,3 +71,9 @@ body{
     display: flex;
     justify-content: space-evenly;
 }
+
+.frist-logo-div{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1rem;
+}
