--- a/Postivus/style.css
+++ b/Postivus/style.css
@@ -123,7 +123,61 @@ text-align: center;
     font-size: 1.5rem;
 }
 
-/* media queries */
+/* section2 end here............................... */
+
+/* section3 start here.............................3 */
+
+
+/* .section3{
+    /* display: grid;
+    justify-content: space-between;
+    border: 1px solid black;
+    gap:3rem; 
+}
+ .div3-main1{
+    display: flex;
+    justify-content: space-between;
+    grid-template-columns: repeat(2, 1fr);
+    border: 1px solid black;
+    gap:3rem;  
+}
+    */
+
+.div3{
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+    border-radius: 2.4rem;
+    align-items: center;
+    padding:4rem;
+    box-shadow:0 2rem 3rem rgba(0,0,0,0,1);
+    height: 25rem;
+
+    
+    
+    
+     
+}
+
+.div3-content{
+    flex-direction: column;
+    margin: 3rem;
+} 
+
+.div3-main1{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap:4rem;
+    margin-top: 5rem;
+    border: 1px solid black;
+    
+    
+}
+
+
+
+
+/* media queries................................... */
 
 @media screen and (max-width: 576px){
 
