--- a/Postivus/style.css
+++ b/Postivus/style.css
@@ -66,8 +66,11 @@ body{
     margin: 0;
 }
 
+
+
 .mobile-img{
     display: none;
+
 }
 
 .desktop-img{
@@ -150,18 +153,38 @@ text-align: center;
     border-radius: 2.4rem;
     align-items: center;
     padding:4rem;
-    box-shadow:0 2rem 3rem rgba(0,0,0,0,1);
-    height: 25rem;
+    box-shadow:0 2rem 3rem rgba(0,0,0,0.1);
+    max-height: 15rem;
+    font-size: 2rem; 
 
-    
-    
-    
      
 }
 
+.div3-content-m{
+    display:none;
+}
+
+/*.section3-child-m{
+    display:none;
+}
+
+.div3-media{
+    display:none;
+}*/
+
+.section3-child-m{
+    display:none;
+}
+
+.div3-media-m{
+    display: none;
+}
+
+
+
 .div3-content{
     flex-direction: column;
-    margin: 3rem;
+    /* margin: 3rem; */
 } 
 
 .div3-main1{
@@ -169,11 +192,30 @@ text-align: center;
     grid-template-columns: repeat(2,1fr);
     gap:4rem;
     margin-top: 5rem;
-    border: 1px solid black;
+    
     
     
 }
 
+.section3-child{
+    display: flex;
+    margin-top: 4rem;
+    align-items: center;
+
+}
+
+.conten-bg-1{
+background-color: #F3F3F3;
+}
+
+.conten-bg-2{
+background-color: #B9FF66;
+
+}
+
+.conten-bg-3{
+background-color: #191A23;
+}
 
 
 
@@ -192,8 +234,14 @@ text-align: center;
         flex-wrap: wrap;
     }
 
+    .div-mobile-img{
+        max-width: 350px;
+        }
+
     .mobile-img{
         display: block;
+        object-fit: cover;
+        max-width: 350px;
     }
 
     .desktop-img{
@@ -214,6 +262,50 @@ text-align: center;
         grid-template-columns: repeat(3, 1fr);
         gap: 1rem
     }
+
+    .div3-main1 {
+        
+        grid-template-columns: repeat(1, 1fr);
+        
 };
+
+.img-container{
+    display: none;
+    max-width: 120px;
+}
+
+.div3-content{
+    display: none;
+}
+
+.img-container-img{
+    display: none;
+    object-fit: cover;
+}
+
+.card-div{
+    font-size: 0.5rem;
+    padding: 10px;
+    justify-content: start;
+    width: 250px;
+    margin-left: 15px; 
+}
+.div3-content-m{}
+
+.section3-child-m{
+    display:block;
+}
+
+.div3-media{
+    display:block;
+}
+
+.section3-child-m{
+    display:block;
+}
+
+.div3-media-m{
+    display:block ;
     
 
+}
