--- a/Postivus/style.css
+++ b/Postivus/style.css
@@ -594,6 +594,38 @@ img.card-img {
     
 }
 
+/*   section10 start here   */
+
+.section10-main-div{
+    background-color: #11111a;
+    color:white;
+    padding: 4px 16px 4px 16px;
+  
+}
+
+
+.section10-parent-div{
+    max-width: 6rem;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
+    
+}
+  
+
+
+.section10-child-div{
+    display: flex;
+    margin-right: 1.5rem;
+    margin-left:1.5rem;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    overflow-x: auto;
+    display: flex;
+    gap: 1rem;
+    scroll-behavior: smooth;
+    
+}
 
 
 /* media queries................................... */
