--- a/Postivus/style.css
+++ b/Postivus/style.css
@@ -8,6 +8,7 @@ body{
     margin-top: 2rem;
     max-width: 1440px;
     margin: 0 auto;
+    font-family: Arial, sans-serif;
 }
 
 /* colour secion */
@@ -585,6 +586,7 @@ img.card-img {
     font-size: 3rem;
     font-size:bold ;
     align-items: center;
+    border: none;
 }
 
 .section9-p{
@@ -593,13 +595,14 @@ img.card-img {
 
     
 }
-
+/* section 9 end here       */
 /*   section10 start here   */
 
 .section10-main-div{
     background-color: #11111a;
     color:white;
     padding: 4px 16px 4px 16px;
+    margin-top: 4rem;
   
 }
 
@@ -628,6 +631,155 @@ img.card-img {
 }
 
 
+/* section 10 end here         */
+/*   section 11 start here     */
+
+
+.section11-main-div{
+    display: flex;
+    gap: 2rem;
+    margin-top: 4rem;
+}
+
+.section11-botton{
+    background-color: #B9FF66;
+    height:3.6rem;
+    width: 20rem;
+    font-size: 3rem;
+    font-size:bold ;
+    align-items: center;
+    font-weight: bold;
+    border:none;
+}
+
+
+.section11-p{
+    font-size:1.4rem;
+    align-items:center; 
+
+}
+
+
+
+/* section11 end here    */
+
+/* section12 start here */
+
+
+.section12-div1{
+    display: flex;
+    flex-shrink: 2;
+    justify-content: center;
+    border:1px solid #000000;
+    margin: 3rem;
+    border-radius: 3rem;
+    padding-top: 5rem;
+    padding-left: 5rem;
+    padding-bottom: 5rem;
+    align-items: center
+}
+
+.contact-form {
+    max-width: 400px;
+    background: #fff;
+    padding: 20px;
+    border-radius: 12px;
+  }
+
+
+  .radio-group {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 20px;
+  }
+
+  .radio-group input[type="radio"] {
+    
+    accent-color: limegreen; /* green selection */
+  }
+
+  .contact-form label {
+    display: block;
+    
+    font-weight: normal;
+  }
+
+  .contact-form textarea {
+    height: 12rem;
+    width: 12rem;
+    resize: vertical;
+  }
+
+
+  .contact-form input[type="Name"],
+.contact-form input[type="email"],
+.contact-form textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #000;
+  border-radius: 8px;
+  box-sizing: border-box;
+  margin-top: 4px;
+  font-size: 14px;
+}
+
+.contact-form button {
+    width: 100%;
+    padding: 14px;
+    background: #11111A;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+
+
+ /* .img-div-12{
+    width: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  }*/
+
+  .img-12-img{
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    margin-right: -324px;
+    overflow: hidden;
+    
+  }
+
+
+  .section4-img{
+    display: flex;
+    
+    
+    justify-content: flex-end;
+    both want to be 100% wide, 2nd item has flex-shrink: 2;
+  }
+
+ /* .section4-img{
+    width: 33.33%;
+    z-index: 1;
+    padding-right: 20px;
+    margin-top: -20px;
+    margin-bottom: -20px;
+    left: 0;
+
+
+}
+.img-section4-img{
+    top:0;
+    right: 0;
+    max-height: auto;
+    height: 100%;
+    width: auto;
+    object-fit: contain;
+    
+    
+}
 /* media queries................................... */
 
 @media screen and (max-width: 576px){
@@ -678,7 +830,7 @@ img.card-img {
         height: 1.5rem;
         width: 2rem;
     }
-
+/*
     .div3-main1 {
         
         grid-template-columns: repeat(1, 1fr);
@@ -707,7 +859,7 @@ img.card-img {
 
  }
         
-        
+   /*     
 
 
 .section3{
@@ -778,6 +930,7 @@ img.img-container-img{
 
 }
 /* section 3  media query end here */
+
 
 /* section 4 meadia query start here */
 .section4-main-div{
