--- a/Postivus/style.css
+++ b/Postivus/style.css
@@ -671,7 +671,7 @@ img.card-img {
     justify-content: space-between;
     background-color: #F3F3F3;
     border-radius: 5.625rem;
-    margin: 3rem;
+    margin: 3rem 0rem;
     border-radius: 3rem;
     padding-top: 5rem;
     padding-left: 5rem;
@@ -787,8 +787,9 @@ img.card-img {
     color:white;
     border-top-left-radius:17px;
     border-top-right-radius: 17px;
-    padding:20px;
+    padding:2rem 4rem ;
     box-sizing: border-box;
+    
     
 }
 .footer-nav {
@@ -798,26 +799,34 @@ img.card-img {
     
     
 }
-.footer-nav sub-ul {
+
+.footer-One{
+    font-size: 1.1rem;
+    gap:10rem;
+}
+.footer-nav .sub-ul {
 font-size:10px;
     display:flex;
     justify-content:space-around;
     align-items:center;
     gap:20px;      
-    
+    list-style-type: none;
 }
 
-.footer-first-div {
-    display:flex;
-    justify-content:space-between;
-    text-align:center;
-    max-width: 120px;
-    font-size: 10px;
-   
+.footer-first-div{
+    display: flex;
+    justify-content: space-between;
+    margin:3rem 0rem;
+    gap:3rem;
+}
+.script-on{
+    font-size: 1.4rem;
 }
 
 .first-div-child1 {
    align-content:center; 
+   
+   
   
 }
 
@@ -827,18 +836,60 @@ font-size:10px;
     max-height: 20px;
 }
 
+.on{
+    border-bottom:2px solid white;
+}
+
+.contact-us{
+    background-color: #B9FF66;
+    height: 2rem;
+    width: 9rem;
+    color:#000;
+    font-size: 1.6rem;
+    margin-bottom: 3rem;
+}
+
 .footer-div-child3 {
 display:flex;
-    border-top : 1px solid;
+    margin-top: 2rem;
     gap:20px;
     
 }
 
-p.footer-div-child3 {
-     font-size:20px;
-    font-weight: 400;
+
+
+.bg-color-footer{
+    background-color:#11111A;
+    width: 24rem;
+    border-radius: 1.4rem;
+    display: flex;
+    text-align:center;
+    padding:4rem;
+    
 }
 
+.bg-color-footer input[type="email"],
+.bg-color-footer textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #000;
+  border-radius: 8px;
+  box-sizing: border-box;
+  margin-top: 3.5px;
+  font-size: 14px;
+  background-color: #000000;
+}
+
+.footer-button-lg{
+    height: 3rem;
+    width: 23rem;
+    border-radius:1.2rem ;
+    text-align: center;
+    font-size:1.2rem;
+    background-color: #B9FF66;
+}
+
+FFFFFF
 
 /* media queries................................... */
 
